selenium-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub-332488
spec:
  selector:
    matchLabels:
      app: selenium-hub-332488
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0      
  template:
    metadata:
      labels:
        app: selenium-hub-332488
    spec:
      containers:
      - name: selenium-hub-332488
        image: selenium/hub:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4444
        livenessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub-332488
  labels:
    app: selenium-hub-332488
spec:
  selector:
    app: selenium-hub-332488
  ports:
  - port: 8100
    targetPort: 4444
  type: LoadBalancer
